--- a/examples/spain.js/scss/reach.scss
+++ b/examples/spain.js/scss/reach.scss
@@ -1,11 +1,6 @@
 @import 'compass/css3/transition';
 @import 'compass/css3/opacity';
 
-#reach-page {
-	position: relative;
-	overflow: hidden;
-}
-
 #reach {
 	overflow: hidden;
 	.image {
