--- a/examples/spain.js/scss/syncing.scss
+++ b/examples/spain.js/scss/syncing.scss
@@ -2,7 +2,6 @@
 @import 'compass/css3/opacity';
 
 #syncing {
-	overflow: hidden;
 	.pusher-logo {
 		position: relative;
 		background: url('../img/pusher-logo.png') top left no-repeat scroll transparent;
